--- a/attar.css
+++ b/attar.css
@@ -9,6 +9,14 @@
     }
 
 
+   .butClick.flash {
+  background-color:var(--secondary);
+  transition: background-color 0.2s;
+}
+
+
+
+
 html{height: 100%;}
 
     body {
@@ -150,7 +158,7 @@ html{height: 100%;}
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
   z-index: 9999;
-  padding: 20px;
+  
 }
 
 .cart-panel.visible {
@@ -161,11 +169,39 @@ html{height: 100%;}
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--primary);
+  padding: 1.32rem;
+  color: var(--bg-light);
 }
 
-.hidden {
-  display: none;
+
+
+.cartCard{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin: 1rem;
+  padding: 0.5rem;
+  background-color: var(--secondary);
+  border-radius: 0.3rem;
 }
+
+.cartImg{
+  width: 5rem;
+  border-radius: 0.3rem;
+}
+
+.cartDetail{
+  display: flex;
+  flex-direction: column;
+  color: var(--bg-light);
+  gap: 0.2rem;
+}
+
+.cartItemsList{
+  padding: 5px;
+}
+
 
 
 
@@ -244,7 +280,7 @@ html{height: 100%;}
       margin-top: 0.5rem;
     }
 
-    .product-card button {
+    .product-card button , .Mainbut {
       background: var(--primary);
       color: var(--bg-light);
       border: none;
